Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,6 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#UTILIZE term_output function.\n",
+    "\n",
     "def output_at(list_of_terms, x_value):\n",
     "    #return list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]"
    ]
