--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "def output_at(list_of_terms, x_value):\n",
     "    #return list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
-    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))"
+    "    outputs = list(ma)"
    ]
   },
   {
