Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "    #return list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
     "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
     "    #when you list(map(lambda term: term_output(term, x_value))) .. you're creating a \n",
-    "                                \n",
+    "                            #argument: expression\n",
     "    return sum(outputs)"
    ]
   },
