--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -191,7 +191,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "    #return list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
     "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "    return sum(outputs) # == adding the term outputs "
+    "    return sum(outputs) # == addin"
    ]
   },
   {
