Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,6 +552,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def output_at(list_of_terms, x_value):\n",
+    "    #return list_of_terms[0][0]*x_value**list_of_terms[0][1] + list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    return sum(outputs) # == adding the term output total together.\n",
+    "\n",
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    "
    ]
