--- a/index.ipynb
+++ b/index.ipynb
@@ -558,7 +558,7 @@
     "    return sum(outputs) # == adding the term output total together.\n",
     "\n",
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    "
+    "    return output_at()"
    ]
   },
   {
