--- a/index.ipynb
+++ b/index.ipynb
@@ -559,7 +559,8 @@
     "\n",
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    return output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value)\n",
-    "    # \n"
+    "    # output_at(list_of_terms, x_value) == f(x)\n",
+    "    # delta_x == whatever number given\n"
    ]
   },
   {
