Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,9 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    return output_at(list_of_terms, x_value + delta_x) - output_at(list_of_terms, x_value)\n",
     "    # output_at(list_of_terms, x_value) == f(x)\n",
-    "    # delta_x == whatever number given\n"
+    "    # delta_x == whatever number given\n",
+    "    #x_value == also given.\n",
+    "    \n"
    ]
   },
   {
