--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,9 +640,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "dc485688-d027-11e9-9365-5ba891c4e0f9",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "dc485962-d027-11e9-9365-5ba891c4e0f9",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "dc485b56-d027-11e9-9365-5ba891c4e0f9",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {
+        "title": "4x + 15"
+       }
+      },
+      "text/html": [
+       "<div id=\"a6d6c3af-c468-444a-b10a-94967193bdd4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a6d6c3af-c468-444a-b10a-94967193bdd4\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"dc55ca16-d027-11e9-9365-5ba891c4e0f9\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"dc55cce6-d027-11e9-9365-5ba891c4e0f9\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"dc55ce44-d027-11e9-9365-5ba891c4e0f9\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"a6d6c3af-c468-444a-b10a-94967193bdd4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a6d6c3af-c468-444a-b10a-94967193bdd4\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"dc55ca16-d027-11e9-9365-5ba891c4e0f9\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"dc55cce6-d027-11e9-9365-5ba891c4e0f9\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"dc55ce44-d027-11e9-9365-5ba891c4e0f9\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import plot, trace_values\n",
     "\n",
@@ -674,7 +747,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    pass"
+    "    "
    ]
   },
   {
