Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -746,6 +746,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#use delta_f function & deltx\n",
+    "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    "
    ]
