--- a/index.ipynb
+++ b/index.ipynb
@@ -746,10 +746,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#use delta_f function & deltx\n",
+    "#use delta_f function & delta_x\n",
     "\n",
-    "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    "
+    "def derivative_at(list_of_terms, x_value, delta_x):\n",
+    "    delta = d"
    ]
   },
   {
