Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -749,8 +749,7 @@
     "#use delta_f function & delta_x\n",
     "\n",
     "def derivative_at(list_of_terms, x_value, delta_x):\n",
-    "    delta = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return round()"
+    "    delta = d"
    ]
   },
   {
