Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -750,7 +750,7 @@
     "\n",
     "def derivative_at(list_of_terms, x_value, delta_x):\n",
     "    delta = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return round()"
+    "    return round(delta/delta_x, 3)"
    ]
   },
   {
