Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,11 +755,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "derivative_of(four_x_plus_fifteen, 3, 2) # 4.0"
+    "derivative_at(four_x_plus_fifteen, 3, 2) # 4.0"
    ]
   },
   {
