--- a/index.ipynb
+++ b/index.ipynb
@@ -794,7 +794,7 @@
    "outputs": [],
    "source": [
     "def derivative_trace(list_of_terms, x_value, line_length = 4, delta_x = .01):\n",
-    "    derivative_at = derivative_of(list_of_terms, x_value, delta_x)\n",
+    "    derivative_at = derivative_at(list_of_terms, x_value, delta_x)\n",
     "    y = output_at(list_of_terms, x_value)\n",
     "    if derivative_at and y:\n",
     "        x_minus = x_value - line_length/2\n",
